# phantom-codes

./: .env.example  .gitignore  BENCHMARK.md  LICENSE  NOTICE  PAPER_WRITING_PLAN.md  README.md  pyproject.toml
configs/: data.yaml  models.yaml  pricing.yaml  synthea.yaml  training.yaml
data/synthea/: README.md  snomed_excluded.json  snomed_inventory_full.json  snomed_inventory_pilot.json  snomed_to_icd10cm.json
docs/learning/: 00-pytorch-foundations.md  01-data-pipeline.md  02-models-and-loss.md  03-training-loop.md  04-practical-considerations.md
paper/: .gitignore  Makefile  README.md  arxiv.tex  cover_letter.md  graphical_abstract.md  main.tex  phantom_codes.tex  phantom_codes_supplementary.tex  references.bib  supplementary.tex
paper/arxiv_sections/: 02_architecture.md  03_hardware_and_optimization.md  06_appendix.md
paper/figures/: figure1_hallucination_heatmap.py  graphical_abstract.py  (+2 more)
scripts/: blinded_progress_check.py  demo_minimal_training.py  diagnose_gemini_empty_predictions.py  generate_synthea_cohort.sh  headline_run_livestat.py  headline_run_watcher.sh  inventory_synthea_snomed.py  setup_synthea.sh
tests/: conftest.py  test_abbreviate.py  test_base.py  test_baselines.py  test_classifier.py  test_code_set.py  test_config.py  test_cost.py  test_cost_monitor.py  test_dataset.py  test_degrade.py  test_disease_groups.py  test_docs_consistency.py  test_fhir_loader.py  test_icd10cm_validator.py  test_infra.py  test_llm.py  test_manifest.py  test_metrics.py  test_prepare.py  test_rag_llm.py  test_registry.py  test_retrieval.py  test_runner.py  test_setup_synthea.py  test_snomed_to_icd_map.py  test_synthea_loader.py  test_trainer.py
(+95 files in other folders)
